MDEV-25018 [FATAL] InnoDB: Unable to read page (of a dropped tablespace)

- This issue is caused by commit deadec4e689c9435e20ebb89fd8f84d3f0f90ff3
(MDEV-24569). InnoDB fails to read the change buffer bitmap page
from dropped tablespace. In ibuf_bitmap_get_map_page_func(), InnoDB
should fetch the page using BUF_GET_POSSIBLY_FREED mode. Callers of
ibuf_bitmap_get_map_page() should be adjusted in that case.